sols/5 (copy)/parse.output
Grammar

    0 $accept: start $end

    1 start: file_input

    2 file_input: star_NEWLINE_stmt ENDMARKER

    3 pick_NEWLINE_stmt: NEWLINE
    4                  | stmt

    5 star_NEWLINE_stmt: star_NEWLINE_stmt pick_NEWLINE_stmt
    6                  | %empty

    7 decorator: AT dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT dotted_name NEWLINE

    9 opt_arglist: arglist
   10            | %empty

   11 decorators: decorators decorator
   12           | decorator

   13 decorated: decorators classdef
   14          | decorators funcdef

   15 $@1: %empty

   16 $@2: %empty

   17 funcdef: $@1 DEF NAME $@2 parameters COLON suite

   18 parameters: LPAR varargslist RPAR
   19           | LPAR RPAR

   20 varargslist: star_fpdef_COMMA pick_STAR_DOUBLESTAR
   21            | star_fpdef_COMMA fpdef opt_EQUAL_test opt_COMMA

   22 opt_EQUAL_test: EQUAL test
   23               | %empty

   24 star_fpdef_COMMA: star_fpdef_COMMA fpdef opt_EQUAL_test COMMA
   25                 | %empty

   26 opt_DOUBLESTAR_NAME: COMMA DOUBLESTAR NAME
   27                    | %empty

   28 pick_STAR_DOUBLESTAR: STAR NAME opt_DOUBLESTAR_NAME
   29                     | DOUBLESTAR NAME

   30 opt_COMMA: COMMA
   31          | %empty

   32 fpdef: NAME
   33      | LPAR fplist RPAR

   34 fplist: fpdef star_fpdef_notest COMMA
   35       | fpdef star_fpdef_notest

   36 star_fpdef_notest: star_fpdef_notest COMMA fpdef
   37                  | %empty

   38 stmt: simple_stmt
   39     | compound_stmt

   40 simple_stmt: small_stmt star_SEMI_small_stmt SEMI NEWLINE
   41            | small_stmt star_SEMI_small_stmt NEWLINE

   42 star_SEMI_small_stmt: star_SEMI_small_stmt SEMI small_stmt
   43                     | %empty

   44 small_stmt: expr_stmt
   45           | print_stmt
   46           | del_stmt
   47           | pass_stmt
   48           | flow_stmt
   49           | import_stmt
   50           | global_stmt
   51           | exec_stmt
   52           | assert_stmt

   53 expr_stmt: testlist augassign pick_yield_expr_testlist
   54          | testlist star_EQUAL

   55 pick_yield_expr_testlist: yield_expr
   56                         | testlist

   57 star_EQUAL: star_EQUAL EQUAL pick_yield_expr_testlist
   58           | %empty

   59 augassign: PLUSEQUAL
   60          | MINEQUAL
   61          | STAREQUAL
   62          | SLASHEQUAL
   63          | PERCENTEQUAL
   64          | AMPEREQUAL
   65          | VBAREQUAL
   66          | CIRCUMFLEXEQUAL
   67          | LEFTSHIFTEQUAL
   68          | RIGHTSHIFTEQUAL
   69          | DOUBLESTAREQUAL
   70          | DOUBLESLASHEQUAL

   71 print_stmt: PRINT opt_test
   72           | PRINT RIGHTSHIFT test opt_test_2

   73 star_COMMA_test: star_COMMA_test COMMA test
   74                | %empty

   75 opt_test: test star_COMMA_test opt_COMMA
   76         | %empty

   77 plus_COMMA_test: plus_COMMA_test COMMA test
   78                | COMMA test

   79 opt_test_2: plus_COMMA_test opt_COMMA
   80           | %empty

   81 del_stmt: DEL exprlist

   82 pass_stmt: PASS

   83 flow_stmt: break_stmt
   84          | continue_stmt
   85          | return_stmt
   86          | raise_stmt
   87          | yield_stmt

   88 break_stmt: BREAK

   89 continue_stmt: CONTINUE

   90 return_stmt: RETURN testlist
   91            | RETURN

   92 yield_stmt: yield_expr

   93 raise_stmt: RAISE test opt_test_3
   94           | RAISE

   95 opt_COMMA_test: COMMA test
   96               | %empty

   97 opt_test_3: COMMA test opt_COMMA_test
   98           | %empty

   99 import_stmt: import_name
  100            | import_from

  101 import_name: IMPORT dotted_as_names

  102 import_from: FROM pick_dotted_name IMPORT pick_STAR_import

  103 pick_dotted_name: star_DOT dotted_name
  104                 | star_DOT DOT

  105 pick_STAR_import: STAR
  106                 | LPAR import_as_names RPAR
  107                 | import_as_names

  108 import_as_name: NAME AS NAME
  109               | NAME

  110 dotted_as_name: dotted_name AS NAME
  111               | dotted_name

  112 import_as_names: import_as_name star_COMMA_import_as_name COMMA
  113                | import_as_name star_COMMA_import_as_name

  114 star_COMMA_import_as_name: star_COMMA_import_as_name COMMA import_as_name
  115                          | %empty

  116 dotted_as_names: dotted_as_name
  117                | dotted_as_names COMMA dotted_as_name

  118 dotted_name: NAME
  119            | dotted_name DOT NAME

  120 global_stmt: GLOBAL NAME star_COMMA_NAME

  121 star_COMMA_NAME: star_COMMA_NAME COMMA NAME
  122                | %empty

  123 exec_stmt: EXEC expr IN test opt_COMMA_test
  124          | EXEC expr

  125 assert_stmt: ASSERT test COMMA test
  126            | ASSERT test

  127 compound_stmt: if_stmt
  128              | while_stmt
  129              | for_stmt
  130              | try_stmt
  131              | with_stmt
  132              | funcdef
  133              | classdef
  134              | decorated

  135 if_stmt: IF test COLON suite star_ELIF ELSE COLON suite
  136        | IF test COLON suite star_ELIF

  137 star_ELIF: star_ELIF ELIF test COLON suite
  138          | %empty

  139 while_stmt: WHILE test COLON suite ELSE COLON suite
  140           | WHILE test COLON suite

  141 for_stmt: FOR exprlist IN testlist COLON suite ELSE COLON suite
  142         | FOR exprlist IN testlist COLON suite

  143 try_stmt: TRY COLON suite plus_except opt_ELSE opt_FINALLY
  144         | TRY COLON suite FINALLY COLON suite

  145 plus_except: plus_except except_clause COLON suite
  146            | except_clause COLON suite

  147 opt_ELSE: ELSE COLON suite
  148         | %empty

  149 opt_FINALLY: FINALLY COLON suite
  150            | %empty

  151 with_stmt: WITH with_item star_COMMA_with_item COLON suite

  152 star_COMMA_with_item: star_COMMA_with_item COMMA with_item
  153                     | %empty

  154 with_item: test AS expr
  155          | test

  156 except_clause: EXCEPT test opt_AS_COMMA
  157              | EXCEPT

  158 pick_AS_COMMA: AS
  159              | COMMA

  160 opt_AS_COMMA: pick_AS_COMMA test
  161             | %empty

  162 suite: simple_stmt
  163      | NEWLINE INDENT plus_stmt DEDENT

  164 plus_stmt: plus_stmt stmt
  165          | stmt

  166 testlist_safe: old_test plus_COMMA_old_test opt_COMMA
  167              | old_test

  168 plus_COMMA_old_test: plus_COMMA_old_test COMMA old_test
  169                    | COMMA old_test

  170 old_test: or_test
  171         | old_lambdef

  172 old_lambdef: LAMBDA varargslist COLON old_test
  173            | LAMBDA COLON old_test

  174 test: or_test opt_IF_ELSE
  175     | lambdef

  176 opt_IF_ELSE: IF or_test ELSE test
  177            | %empty

  178 or_test: and_test
  179        | or_test OR and_test

  180 and_test: not_test
  181         | and_test AND not_test

  182 not_test: NOT not_test
  183         | comparison

  184 comparison: expr
  185           | comparison comp_op expr

  186 comp_op: LESS
  187        | GREATER
  188        | EQEQUAL
  189        | GREATEREQUAL
  190        | LESSEQUAL
  191        | GRLT
  192        | NOTEQUAL
  193        | IN
  194        | NOT IN
  195        | IS
  196        | IS NOT

  197 expr: xor_expr
  198     | expr BAR xor_expr

  199 xor_expr: and_expr
  200         | xor_expr CIRCUMFLEX and_expr

  201 and_expr: shift_expr
  202         | and_expr AMPERSAND shift_expr

  203 shift_expr: arith_expr
  204           | shift_expr pick_LEFTSHIFT_RIGHTSHIFT arith_expr

  205 pick_LEFTSHIFT_RIGHTSHIFT: LEFTSHIFT
  206                          | RIGHTSHIFT

  207 arith_expr: term
  208           | arith_expr pick_PLUS_MINUS term

  209 pick_PLUS_MINUS: PLUS
  210                | MINUS

  211 term: factor
  212     | term pick_multop factor

  213 pick_multop: STAR
  214            | SLASH
  215            | PERCENT
  216            | DOUBLESLASH

  217 factor: pick_unop factor
  218       | power

  219 pick_unop: PLUS
  220          | MINUS
  221          | TILDE

  222 power: atom star_trailer DOUBLESTAR factor
  223      | atom star_trailer

  224 star_trailer: star_trailer trailer
  225             | %empty

  226 atom: LPAR opt_yield_test RPAR
  227     | LSQB opt_listmaker RSQB
  228     | LBRACE opt_dictorsetmaker RBRACE
  229     | BACKQUOTE testlist1 BACKQUOTE
  230     | NAME
  231     | NUMBER
  232     | plus_STRING

  233 pick_yield_expr_testlist_comp: yield_expr
  234                              | testlist_comp

  235 opt_yield_test: pick_yield_expr_testlist_comp
  236               | %empty

  237 opt_listmaker: listmaker
  238              | %empty

  239 opt_dictorsetmaker: dictorsetmaker
  240                   | %empty

  241 plus_STRING: plus_STRING STRING
  242            | STRING

  243 listmaker: test list_for
  244          | test star_COMMA_test opt_COMMA

  245 testlist_comp: test comp_for
  246              | test star_COMMA_test opt_COMMA

  247 lambdef: LAMBDA varargslist COLON test
  248        | LAMBDA COLON test

  249 trailer: LPAR opt_arglist RPAR
  250        | LSQB subscriptlist RSQB
  251        | DOT NAME

  252 subscriptlist: subscript star_COMMA_subscript COMMA
  253              | subscript star_COMMA_subscript

  254 star_COMMA_subscript: star_COMMA_subscript COMMA subscript
  255                     | %empty

  256 subscript: DOT DOT DOT
  257          | test
  258          | opt_test_only COLON opt_test_only opt_sliceop

  259 opt_test_only: test
  260              | %empty

  261 opt_sliceop: sliceop
  262            | %empty

  263 sliceop: COLON test
  264        | COLON

  265 exprlist: expr star_COMMA_expr COMMA
  266         | expr star_COMMA_expr

  267 star_COMMA_expr: star_COMMA_expr COMMA expr
  268                | %empty

  269 testlist: test star_COMMA_test COMMA
  270         | test star_COMMA_test

  271 dictorsetmaker: test COLON test pick_for_test_test
  272               | test pick_for_test

  273 star_test_COLON_test: star_test_COLON_test COMMA test COLON test
  274                     | %empty

  275 pick_for_test_test: comp_for
  276                   | star_test_COLON_test opt_COMMA

  277 pick_for_test: comp_for
  278              | star_COMMA_test opt_COMMA

  279 classdef: CLASS NAME LPAR opt_testlist RPAR COLON suite
  280         | CLASS NAME COLON suite

  281 opt_testlist: testlist
  282             | %empty

  283 arglist: star_argument_COMMA pick_argument

  284 star_argument_COMMA: star_argument_COMMA argument COMMA
  285                    | %empty

  286 star_COMMA_argument: star_COMMA_argument COMMA argument
  287                    | %empty

  288 opt_DOUBLESTAR_test: COMMA DOUBLESTAR test
  289                    | %empty

  290 pick_argument: argument opt_COMMA
  291              | STAR test star_COMMA_argument opt_DOUBLESTAR_test
  292              | DOUBLESTAR test

  293 argument: test opt_comp_for
  294         | test EQUAL test

  295 opt_comp_for: comp_for
  296             | %empty

  297 list_iter: list_for
  298          | list_if

  299 list_for: FOR exprlist IN testlist_safe list_iter
  300         | FOR exprlist IN testlist_safe

  301 list_if: IF old_test list_iter
  302        | IF old_test

  303 comp_iter: comp_for
  304          | comp_if

  305 comp_for: FOR exprlist IN or_test comp_iter
  306         | FOR exprlist IN or_test

  307 comp_if: IF old_test comp_iter
  308        | IF old_test

  309 testlist1: test
  310          | testlist1 COMMA test

  311 yield_expr: YIELD testlist
  312           | YIELD

  313 star_DOT: star_DOT DOT
  314         | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
AMPEREQUAL (258) 64
AMPERSAND (259) 202
AND (260) 181
AS (261) 108 110 154 158
ASSERT (262) 125 126
AT (263) 7 8
BACKQUOTE (264) 229
BAR (265) 198
BREAK (266) 88
CIRCUMFLEX (267) 200
CIRCUMFLEXEQUAL (268) 66
CLASS (269) 279 280
COLON (270) 17 135 136 137 139 140 141 142 143 144 145 146 147 149
    151 172 173 247 248 258 263 264 271 273 279 280
COMMA (271) 24 26 30 34 36 73 77 78 95 97 112 114 117 121 125 152 159
    168 169 252 254 265 267 269 273 284 286 288 310
CONTINUE (272) 89
DEDENT (273) 163
DEF (274) 17
DEL (275) 81
DOT (276) 104 119 251 256 313
DOUBLESLASH (277) 216
DOUBLESLASHEQUAL (278) 70
DOUBLESTAR (279) 26 29 222 288 292
DOUBLESTAREQUAL (280) 69
ELIF (281) 137
ELSE (282) 135 139 141 147 176
ENDMARKER (283) 2
EQEQUAL (284) 188
EQUAL (285) 22 57 294
EXCEPT (286) 156 157
EXEC (287) 123 124
FINALLY (288) 144 149
FOR (289) 141 142 299 300 305 306
FROM (290) 102
GLOBAL (291) 120
GREATER (292) 187
GREATEREQUAL (293) 189
GRLT (294) 191
IF (295) 135 136 176 301 302 307 308
IMPORT (296) 101 102
IN (297) 123 141 142 193 194 299 300 305 306
INDENT (298) 163
IS (299) 195 196
LAMBDA (300) 172 173 247 248
LBRACE (301) 228
LEFTSHIFT (302) 205
LEFTSHIFTEQUAL (303) 67
LESS (304) 186
LESSEQUAL (305) 190
LPAR (306) 7 18 19 33 106 226 249 279
LSQB (307) 227 250
MINEQUAL (308) 60
MINUS (309) 210 220
NAME (310) 17 26 28 29 32 108 109 110 118 119 120 121 230 251 279 280
NEWLINE (311) 3 7 8 40 41 163
NOT (312) 182 194 196
NOTEQUAL (313) 192
NUMBER (314) 231
OR (315) 179
PASS (316) 82
PERCENT (317) 215
PERCENTEQUAL (318) 63
PLUS (319) 209 219
PLUSEQUAL (320) 59
PRINT (321) 71 72
RAISE (322) 93 94
RBRACE (323) 228
RETURN (324) 90 91
RIGHTSHIFT (325) 72 206
RIGHTSHIFTEQUAL (326) 68
RPAR (327) 7 18 19 33 106 226 249 279
RSQB (328) 227 250
SEMI (329) 40 42
SLASH (330) 214
SLASHEQUAL (331) 62
STAR (332) 28 105 213 291
STAREQUAL (333) 61
STRING (334) 241 242
TILDE (335) 221
TRY (336) 143 144
VBAREQUAL (337) 65
WHILE (338) 139 140
WITH (339) 151
YIELD (340) 311 312


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
start (87)
    on left: 1, on right: 0
file_input (88)
    on left: 2, on right: 1
pick_NEWLINE_stmt (89)
    on left: 3 4, on right: 5
star_NEWLINE_stmt (90)
    on left: 5 6, on right: 2 5
decorator (91)
    on left: 7 8, on right: 11 12
opt_arglist (92)
    on left: 9 10, on right: 7 249
decorators (93)
    on left: 11 12, on right: 11 13 14
decorated (94)
    on left: 13 14, on right: 134
funcdef (95)
    on left: 17, on right: 14 132
$@1 (96)
    on left: 15, on right: 17
$@2 (97)
    on left: 16, on right: 17
parameters (98)
    on left: 18 19, on right: 17
varargslist (99)
    on left: 20 21, on right: 18 172 247
opt_EQUAL_test (100)
    on left: 22 23, on right: 21 24
star_fpdef_COMMA (101)
    on left: 24 25, on right: 20 21 24
opt_DOUBLESTAR_NAME (102)
    on left: 26 27, on right: 28
pick_STAR_DOUBLESTAR (103)
    on left: 28 29, on right: 20
opt_COMMA (104)
    on left: 30 31, on right: 21 75 79 166 244 246 276 278 290
fpdef (105)
    on left: 32 33, on right: 21 24 34 35 36
fplist (106)
    on left: 34 35, on right: 33
star_fpdef_notest (107)
    on left: 36 37, on right: 34 35 36
stmt (108)
    on left: 38 39, on right: 4 164 165
simple_stmt (109)
    on left: 40 41, on right: 38 162
star_SEMI_small_stmt (110)
    on left: 42 43, on right: 40 41 42
small_stmt (111)
    on left: 44 45 46 47 48 49 50 51 52, on right: 40 41 42
expr_stmt (112)
    on left: 53 54, on right: 44
pick_yield_expr_testlist (113)
    on left: 55 56, on right: 53 57
star_EQUAL (114)
    on left: 57 58, on right: 54 57
augassign (115)
    on left: 59 60 61 62 63 64 65 66 67 68 69 70, on right: 53
print_stmt (116)
    on left: 71 72, on right: 45
star_COMMA_test (117)
    on left: 73 74, on right: 73 75 244 246 269 270 278
opt_test (118)
    on left: 75 76, on right: 71
plus_COMMA_test (119)
    on left: 77 78, on right: 77 79
opt_test_2 (120)
    on left: 79 80, on right: 72
del_stmt (121)
    on left: 81, on right: 46
pass_stmt (122)
    on left: 82, on right: 47
flow_stmt (123)
    on left: 83 84 85 86 87, on right: 48
break_stmt (124)
    on left: 88, on right: 83
continue_stmt (125)
    on left: 89, on right: 84
return_stmt (126)
    on left: 90 91, on right: 85
yield_stmt (127)
    on left: 92, on right: 87
raise_stmt (128)
    on left: 93 94, on right: 86
opt_COMMA_test (129)
    on left: 95 96, on right: 97 123
opt_test_3 (130)
    on left: 97 98, on right: 93
import_stmt (131)
    on left: 99 100, on right: 49
import_name (132)
    on left: 101, on right: 99
import_from (133)
    on left: 102, on right: 100
pick_dotted_name (134)
    on left: 103 104, on right: 102
pick_STAR_import (135)
    on left: 105 106 107, on right: 102
import_as_name (136)
    on left: 108 109, on right: 112 113 114
dotted_as_name (137)
    on left: 110 111, on right: 116 117
import_as_names (138)
    on left: 112 113, on right: 106 107
star_COMMA_import_as_name (139)
    on left: 114 115, on right: 112 113 114
dotted_as_names (140)
    on left: 116 117, on right: 101 117
dotted_name (141)
    on left: 118 119, on right: 7 8 103 110 111 119
global_stmt (142)
    on left: 120, on right: 50
star_COMMA_NAME (143)
    on left: 121 122, on right: 120 121
exec_stmt (144)
    on left: 123 124, on right: 51
assert_stmt (145)
    on left: 125 126, on right: 52
compound_stmt (146)
    on left: 127 128 129 130 131 132 133 134, on right: 39
if_stmt (147)
    on left: 135 136, on right: 127
star_ELIF (148)
    on left: 137 138, on right: 135 136 137
while_stmt (149)
    on left: 139 140, on right: 128
for_stmt (150)
    on left: 141 142, on right: 129
try_stmt (151)
    on left: 143 144, on right: 130
plus_except (152)
    on left: 145 146, on right: 143 145
opt_ELSE (153)
    on left: 147 148, on right: 143
opt_FINALLY (154)
    on left: 149 150, on right: 143
with_stmt (155)
    on left: 151, on right: 131
star_COMMA_with_item (156)
    on left: 152 153, on right: 151 152
with_item (157)
    on left: 154 155, on right: 151 152
except_clause (158)
    on left: 156 157, on right: 145 146
pick_AS_COMMA (159)
    on left: 158 159, on right: 160
opt_AS_COMMA (160)
    on left: 160 161, on right: 156
suite (161)
    on left: 162 163, on right: 17 135 136 137 139 140 141 142 143
    144 145 146 147 149 151 279 280
plus_stmt (162)
    on left: 164 165, on right: 163 164
testlist_safe (163)
    on left: 166 167, on right: 299 300
plus_COMMA_old_test (164)
    on left: 168 169, on right: 166 168
old_test (165)
    on left: 170 171, on right: 166 167 168 169 172 173 301 302 307
    308
old_lambdef (166)
    on left: 172 173, on right: 171
test (167)
    on left: 174 175, on right: 22 72 73 75 77 78 93 95 97 123 125
    126 135 136 137 139 140 154 155 156 160 176 243 244 245 246 247
    248 257 259 263 269 270 271 272 273 288 291 292 293 294 309 310
opt_IF_ELSE (168)
    on left: 176 177, on right: 174
or_test (169)
    on left: 178 179, on right: 170 174 176 179 305 306
and_test (170)
    on left: 180 181, on right: 178 179 181
not_test (171)
    on left: 182 183, on right: 180 181 182
comparison (172)
    on left: 184 185, on right: 183 185
comp_op (173)
    on left: 186 187 188 189 190 191 192 193 194 195 196, on right:
    185
expr (174)
    on left: 197 198, on right: 123 124 154 184 185 198 265 266 267
xor_expr (175)
    on left: 199 200, on right: 197 198 200
and_expr (176)
    on left: 201 202, on right: 199 200 202
shift_expr (177)
    on left: 203 204, on right: 201 202 204
pick_LEFTSHIFT_RIGHTSHIFT (178)
    on left: 205 206, on right: 204
arith_expr (179)
    on left: 207 208, on right: 203 204 208
pick_PLUS_MINUS (180)
    on left: 209 210, on right: 208
term (181)
    on left: 211 212, on right: 207 208 212
pick_multop (182)
    on left: 213 214 215 216, on right: 212
factor (183)
    on left: 217 218, on right: 211 212 217 222
pick_unop (184)
    on left: 219 220 221, on right: 217
power (185)
    on left: 222 223, on right: 218
star_trailer (186)
    on left: 224 225, on right: 222 223 224
atom (187)
    on left: 226 227 228 229 230 231 232, on right: 222 223
pick_yield_expr_testlist_comp (188)
    on left: 233 234, on right: 235
opt_yield_test (189)
    on left: 235 236, on right: 226
opt_listmaker (190)
    on left: 237 238, on right: 227
opt_dictorsetmaker (191)
    on left: 239 240, on right: 228
plus_STRING (192)
    on left: 241 242, on right: 232 241
listmaker (193)
    on left: 243 244, on right: 237
testlist_comp (194)
    on left: 245 246, on right: 234
lambdef (195)
    on left: 247 248, on right: 175
trailer (196)
    on left: 249 250 251, on right: 224
subscriptlist (197)
    on left: 252 253, on right: 250
star_COMMA_subscript (198)
    on left: 254 255, on right: 252 253 254
subscript (199)
    on left: 256 257 258, on right: 252 253 254
opt_test_only (200)
    on left: 259 260, on right: 258
opt_sliceop (201)
    on left: 261 262, on right: 258
sliceop (202)
    on left: 263 264, on right: 261
exprlist (203)
    on left: 265 266, on right: 81 141 142 299 300 305 306
star_COMMA_expr (204)
    on left: 267 268, on right: 265 266 267
testlist (205)
    on left: 269 270, on right: 53 54 56 90 141 142 281 311
dictorsetmaker (206)
    on left: 271 272, on right: 239
star_test_COLON_test (207)
    on left: 273 274, on right: 273 276
pick_for_test_test (208)
    on left: 275 276, on right: 271
pick_for_test (209)
    on left: 277 278, on right: 272
classdef (210)
    on left: 279 280, on right: 13 133
opt_testlist (211)
    on left: 281 282, on right: 279
arglist (212)
    on left: 283, on right: 9
star_argument_COMMA (213)
    on left: 284 285, on right: 283 284
star_COMMA_argument (214)
    on left: 286 287, on right: 286 291
opt_DOUBLESTAR_test (215)
    on left: 288 289, on right: 291
pick_argument (216)
    on left: 290 291 292, on right: 283
argument (217)
    on left: 293 294, on right: 284 286 290
opt_comp_for (218)
    on left: 295 296, on right: 293
list_iter (219)
    on left: 297 298, on right: 299 301
list_for (220)
    on left: 299 300, on right: 243 297
list_if (221)
    on left: 301 302, on right: 298
comp_iter (222)
    on left: 303 304, on right: 305 307
comp_for (223)
    on left: 305 306, on right: 245 275 277 295 303
comp_if (224)
    on left: 307 308, on right: 304
testlist1 (225)
    on left: 309 310, on right: 229 310
yield_expr (226)
    on left: 311 312, on right: 55 92 233
star_DOT (227)
    on left: 313 314, on right: 103 104 313


State 0

    0 $accept: . start $end

    $default  reduce using rule 6 (star_NEWLINE_stmt)

    start              go to state 1
    file_input         go to state 2
    star_NEWLINE_stmt  go to state 3


State 1

    0 $accept: start . $end

    $end  shift, and go to state 4


State 2

    1 start: file_input .

    $default  reduce using rule 1 (start)


State 3

    2 file_input: star_NEWLINE_stmt . ENDMARKER
    5 star_NEWLINE_stmt: star_NEWLINE_stmt . pick_NEWLINE_stmt

    ASSERT     shift, and go to state 5
    AT         shift, and go to state 6
    BACKQUOTE  shift, and go to state 7
    BREAK      shift, and go to state 8
    CLASS      shift, and go to state 9
    CONTINUE   shift, and go to state 10
    DEL        shift, and go to state 11
    ENDMARKER  shift, and go to state 12
    EXEC       shift, and go to state 13
    FOR        shift, and go to state 14
    FROM       shift, and go to state 15
    GLOBAL     shift, and go to state 16
    IF         shift, and go to state 17
    IMPORT     shift, and go to state 18
    LAMBDA     shift, and go to state 19
    LBRACE     shift, and go to state 20
    LPAR       shift, and go to state 21
    LSQB       shift, and go to state 22
    MINUS      shift, and go to state 23
    NAME       shift, and go to state 24
    NEWLINE    shift, and go to state 25
    NOT        shift, and go to state 26
    NUMBER     shift, and go to state 27
    PASS       shift, and go to state 28
    PLUS       shift, and go to state 29
    PRINT      shift, and go to state 30
    RAISE      shift, and go to state 31
    RETURN     shift, and go to state 32
    STRING     shift, and go to state 33
    TILDE      shift, and go to state 34
    TRY        shift, and go to state 35
    WHILE      shift, and go to state 36
    WITH       shift, and go to state 37
    YIELD      shift, and go to state 38

    $default  reduce using rule 15 ($@1)

    pick_NEWLINE_stmt  go to state 39
    decorator          go to state 40
    decorators         go to state 41
    decorated          go to state 42
    funcdef            go to state 43
    $@1                go to state 44
    stmt               go to state 45
    simple_stmt        go to state 46
    small_stmt         go to state 47
    expr_stmt          go to state 48
    print_stmt         go to state 49
    del_stmt           go to state 50
    pass_stmt          go to state 51
    flow_stmt          go to state 52
    break_stmt         go to state 53
    continue_stmt      go to state 54
    return_stmt        go to state 55
    yield_stmt         go to state 56
    raise_stmt         go to state 57
    import_stmt        go to state 58
    import_name        go to state 59
    import_from        go to state 60
    global_stmt        go to state 61
    exec_stmt          go to state 62
    assert_stmt        go to state 63
    compound_stmt      go to state 64
    if_stmt            go to state 65
    while_stmt         go to state 66
    for_stmt           go to state 67
    try_stmt           go to state 68
    with_stmt          go to state 69
    test               go to state 70
    or_test            go to state 71
    and_test           go to state 72
    not_test           go to state 73
    comparison         go to state 74
    expr               go to state 75
    xor_expr           go to state 76
    and_expr           go to state 77
    shift_expr         go to state 78
    arith_expr         go to state 79
    term               go to state 80
    factor             go to state 81
    pick_unop          go to state 82
    power              go to state 83
    atom               go to state 84
    plus_STRING        go to state 85
    lambdef            go to state 86
    testlist           go to state 87
    classdef           go to state 88
    yield_expr         go to state 89


State 4

    0 $accept: start $end .

    $default  accept


State 5

  125 assert_stmt: ASSERT . test COMMA test
  126            | ASSERT . test

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 19
    LBRACE     shift, and go to state 20
    LPAR       shift, and go to state 21
    LSQB       shift, and go to state 22
    MINUS      shift, and go to state 23
    NAME       shift, and go to state 24
    NOT        shift, and go to state 26
    NUMBER     shift, and go to state 27
    PLUS       shift, and go to state 29
    STRING     shift, and go to state 33
    TILDE      shift, and go to state 34

    test         go to state 90
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86


State 6

    7 decorator: AT . dotted_name LPAR opt_arglist RPAR NEWLINE
    8          | AT . dotted_name NEWLINE

    NAME  shift, and go to state 91

    dotted_name  go to state 92


State 7

  229 atom: BACKQUOTE . testlist1 BACKQUOTE

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 19
    LBRACE     shift, and go to state 20
    LPAR       shift, and go to state 21
    LSQB       shift, and go to state 22
    MINUS      shift, and go to state 23
    NAME       shift, and go to state 24
    NOT        shift, and go to state 26
    NUMBER     shift, and go to state 27
    PLUS       shift, and go to state 29
    STRING     shift, and go to state 33
    TILDE      shift, and go to state 34

    test         go to state 93
    or_test      go to state 71
    and_test     go to state 72
    not_test     go to state 73
    comparison   go to state 74
    expr         go to state 75
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    lambdef      go to state 86
    testlist1    go to state 94


State 8

   88 break_stmt: BREAK .

    $default  reduce using rule 88 (break_stmt)


State 9

  279 classdef: CLASS . NAME LPAR opt_testlist RPAR COLON suite
  280         | CLASS . NAME COLON suite

    NAME  shift, and go to state 95


State 10

   89 continue_stmt: CONTINUE .

    $default  reduce using rule 89 (continue_stmt)


State 11

   81 del_stmt: DEL . exprlist

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 20
    LPAR       shift, and go to state 21
    LSQB       shift, and go to state 22
    MINUS      shift, and go to state 23
    NAME       shift, and go to state 24
    NUMBER     shift, and go to state 27
    PLUS       shift, and go to state 29
    STRING     shift, and go to state 33
    TILDE      shift, and go to state 34

    expr         go to state 96
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 97


State 12

    2 file_input: star_NEWLINE_stmt ENDMARKER .

    $default  reduce using rule 2 (file_input)


State 13

  123 exec_stmt: EXEC . expr IN test opt_COMMA_test
  124          | EXEC . expr

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 20
    LPAR       shift, and go to state 21
    LSQB       shift, and go to state 22
    MINUS      shift, and go to state 23
    NAME       shift, and go to state 24
    NUMBER     shift, and go to state 27
    PLUS       shift, and go to state 29
    STRING     shift, and go to state 33
    TILDE      shift, and go to state 34

    expr         go to state 98
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85


State 14

  141 for_stmt: FOR . exprlist IN testlist COLON suite ELSE COLON suite
  142         | FOR . exprlist IN testlist COLON suite

    BACKQUOTE  shift, and go to state 7
    LBRACE     shift, and go to state 20
    LPAR       shift, and go to state 21
    LSQB       shift, and go to state 22
    MINUS      shift, and go to state 23
    NAME       shift, and go to state 24
    NUMBER     shift, and go to state 27
    PLUS       shift, and go to state 29
    STRING     shift, and go to state 33
    TILDE      shift, and go to state 34

    expr         go to state 96
    xor_expr     go to state 76
    and_expr     go to state 77
    shift_expr   go to state 78
    arith_expr   go to state 79
    term         go to state 80
    factor       go to state 81
    pick_unop    go to state 82
    power        go to state 83
    atom         go to state 84
    plus_STRING  go to state 85
    exprlist     go to state 99


State 15

  102 import_from: FROM . pick_dotted_name IMPORT pick_STAR_import

    $default  reduce using rule 314 (star_DOT)

    pick_dotted_name  go to state 100
    star_DOT          go to state 101


State 16

  120 global_stmt: GLOBAL . NAME star_COMMA_NAME

    NAME  shift, and go to state 102


State 17

  135 if_stmt: IF . test COLON suite star_ELIF ELSE COLON suite
  136        | IF . test COLON suite star_ELIF

    BACKQUOTE  shift, and go to state 7
    LAMBDA     shift, and go to state 19
    LBRACE     shift, and go to state 20
    LPAR       shift, and go to state 21
    LSQB       shift, and go to state 22
    MINUS      shift, and go to state 23
    NAME       shift, and go to state 24
    NOT        shift, and go to state 26
    NUMBER     shift, and go to state 27
    PLUS       shift, and go to state 29
    STRING     shift, and go to state 33
    TILDE      shift, and go to state 34
